# librnnvad

./: CMakeLists.txt  README.md  VERSIONS  rnnvad.pc.in
examples/: CMakeLists.txt  rnn_vad_tool.cc
include/: rnn_vad.h
include/rnn_vad/: auto_correlation.h  features_extraction.h  pitch_search.h  pitch_search_internal.h  rnn.h  spectral_features.h  spectral_features_internal.h  symmetric_matrix_buffer.h
include/rtc_base/: checks.h
include/utility/: biquad_filter.h
src/: rnn_vad.cc
src/resampler/: push_resampler.cc  push_sinc_resampler.cc  sinc_resampler.cc  sinc_resampler_neon.cc
src/rnn_vad/: auto_correlation.cc  common.cc  features_extraction.cc  lp_residual.cc  pitch_search.cc  pitch_search_internal.cc  rnn.cc  spectral_features.cc  spectral_features_internal.cc
src/rtc_base/memory/: aligned_malloc.cc
src/utility/: audio_util.cc  biquad_filter.cc  pffft_wrapper.cc
tools/: get_deps.sh  import-commit  import-paths  import.sh
